# MatMulLib

./: CMakeLists.txt
include/: matmul.h  random.h  tensor.h
src/: test.c
src/lib/: matmul.c  random.c  tensor.c
